--- a/src/public/css/web/main.css
+++ b/src/public/css/web/main.css
@@ -220,9 +220,15 @@ h6 {
   outline: medium none;
   padding-left: 10px;
   width: 155px;
-  background-image: url(../../images/layouts/searchicon.png);
-  background-repeat: no-repeat;
-  background-position: 130px;
+}
+
+.search_box_button {
+  background: #f0f0e9;
+  border: medium none;
+  outline: medium none;
+  height: 35px;
+  padding: 0 10px;
+  margin-left: -5px;
 }
 
 .navbar-header .navbar-toggle .icon-bar {
@@ -330,11 +336,6 @@ ul.sub-menu {
   position: inherit;
 }
 
-.video-gallery a img {
-  height: 100%;
-  width: 100%;
-}
-
 .iframe-img {
   position: relative;
   display: block;
@@ -405,30 +406,8 @@ ul.sub-menu {
   text-decoration: underline;
 }
 
-a#scrollUp {
-  bottom: 0;
-  right: 10px;
-  padding: 5px 10px;
-  background: #d92b34;
-  color: #fff;
-  -webkit-animation: bounce 2s ease infinite;
-  animation: bounce 2s ease infinite;
-}
-
-a#scrollUp i {
-  font-size: 30px;
-}
-
 .mainmenu ul li:first-child {
   padding-left: 0;
-}
-
-.contactinfo ul li:first-child {
-  margin-left: -15px;
-}
-
-.contactinfo ul li a:hover {
-  background: inherit;
 }
 
 .navbar-nav li ul.sub-menu li {
@@ -443,10 +422,311 @@ a#scrollUp i {
   color: #fff;
 }
 
+.btn-group__language {
+  margin-left: 20px;
+}
+
+/*************************
+********* Home *********
+**************************/
+
+#slider {
+  padding-bottom: 45px;
+}
+
+.control-carousel {
+  position: absolute;
+  top: 40%;
+  font-size: 60px;
+  color: #c2c2c1;
+}
+
+.carousel-indicators li {
+  background: #c4c4be;
+}
+
+.carousel-indicators li.active {
+  background: #fe980f;
+}
+
+.control-carousel:hover {
+  color: #fe980f;
+}
+
+.right {
+  right: 0;
+}
+
+h2.title {
+  color: #d92b34;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  margin: 0 15px 30px 15px;
+  text-transform: uppercase;
+  position: relative;
+}
+
+.bg h2.title {
+  margin-right: 0;
+  margin-left: 0;
+  margin-top: 0;
+}
+
+.brands_products {
+  margin-bottom: 35px;
+}
+
+.left-sidebar h2,
+.brands_products h2 {
+  color: #d92b34;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  margin: 5px auto 20px;
+  text-align: center;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 3;
+}
+
+.left-sidebar h2::after,
+h2.title::after {
+  content: " ";
+  position: absolute;
+  border: 1px solid #f5f5f5;
+  bottom: 8px;
+  left: 0;
+  width: 100%;
+  height: 0;
+  z-index: -2;
+}
+
+.left-sidebar h2::before {
+  content: " ";
+  position: absolute;
+  background: #fff;
+  bottom: -6px;
+  width: 130px;
+  height: 30px;
+  z-index: -1;
+  left: 50%;
+  margin-left: -65px;
+}
+
+h2.title::before {
+  content: " ";
+  position: absolute;
+  background: #fff;
+  bottom: -6px;
+  width: 220px;
+  height: 30px;
+  z-index: -1;
+  left: 50%;
+  margin-left: -110px;
+}
+
+.brands-name {
+  border: 1px solid #f7f7f0;
+  padding-bottom: 20px;
+  padding-top: 15px;
+}
+
+.brands-name .nav-stacked li a {
+  background-color: #fff;
+  color: #696763;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  padding: 5px 25px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.brands-name .nav-stacked li a:hover {
+  background-color: #fff;
+  color: #696763;
+}
+
+.shipping {
+  background-color: #f2f2f2;
+  margin-top: 40px;
+  overflow: hidden;
+  padding-top: 20px;
+  position: relative;
+}
+
+.features_items {
+  padding-top: 5px;
+  overflow: hidden;
+}
+
+.product-image-wrapper {
+  border: 1px solid #f7f7f5;
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+
+.single-products {
+  position: relative;
+}
+
+.product-info h2 {
+  color: #fe980f;
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.product-overlay h2 {
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.product-overlay p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #fff;
+}
+
+.product-info p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #696763;
+}
+
+.product-info img {
+  width: 100%;
+}
+
+.product-info {
+  position: relative;
+}
+
+.product-overlay {
+  background: rgba(0, 0, 0, 0.6);
+  top: 0;
+  height: 0;
+  position: absolute;
+  -webkit-transition: height 500ms ease 0s;
+  transition: height 500ms ease 0s;
+  width: 100%;
+  display: block;
+}
+
+.product-overlay .overlay-content {
+  bottom: 0;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+}
+
+.add-to-cart {
+  background: #000;
+  border: 0 none;
+  border-radius: 0;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  margin-bottom: 25px;
+}
+
+.add-to-cart i {
+  margin-right: 5px;
+}
+
+.product-overlay .add-to-cart {
+  background: #ebedef;
+  border: 0 none;
+  border-radius: 0;
+  color: #d92b34;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  margin-bottom: 25px;
+}
+
+.add-to-cart:hover {
+  background: #fe980f;
+  border: 0 none;
+  border-radius: 0;
+  color: #fff;
+}
+
+.product-overlay .add-to-cart:hover {
+  background: #ebedef;
+  color: #fe980f;
+}
+
+.recommended_items {
+  overflow: hidden;
+  padding-top: 5px;
+}
+
+#recommended-item-carousel .carousel-inner .item {
+  padding-left: 0;
+}
+
+.recommended-item-control {
+  position: absolute;
+  top: 41%;
+}
+
+.recommended-item-control i {
+  background: none repeat scroll 0 0 #fe980f;
+  color: #fff;
+  font-size: 20px;
+  padding: 4px 10px;
+}
+
+.recommended-item-control i:hover {
+  background: #ccccc6;
+}
+
+.new {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.contactinfo ul li:first-child {
+  margin-left: -15px;
+}
+
+.contactinfo ul li a:hover {
+  background: inherit;
+}
+
 .navbar-nav li ul.sub-menu li a:hover {
   color: #fdb45e;
 }
 
-.btn-group__language {
-  margin-left: 20px;
+.video-gallery a img {
+  height: 100%;
+  width: 100%;
+}
+
+.single-products:hover .product-overlay {
+  display: block;
+  height: 100%;
+}
+
+a#scrollUp {
+  bottom: 0;
+  right: 10px;
+  padding: 5px 10px;
+  background: #d92b34;
+  color: #fff;
+  -webkit-animation: bounce 2s ease infinite;
+  animation: bounce 2s ease infinite;
+}
+
+a#scrollUp i {
+  font-size: 30px;
+}
+
+.category-products .panel-default .panel-heading .panel-title a {
+  margin: 0;
 }
