--- a/src/public/css/web/main.css
+++ b/src/public/css/web/main.css
@@ -1,10 +1,11 @@
-﻿body {
+﻿/* stylelint-disable no-descending-specificity */
+body {
   font-family: 'Roboto', sans-serif;
   position: relative;
-  font-weight: 400px;
+  font-weight: 400;
 }
 
-ul li {
+ul > li {
   list-style: none;
 }
 
@@ -51,25 +52,57 @@ h6 {
   background: none repeat scroll 0 0 #000;
 }
 
-.product-info > p > a:hover {
-  margin: 1px;
-}
-
-.contactinfo > ul > li > a {
-  font-size: 12px;
-  color: #fff;
-  font-family: 'Roboto', sans-serif;
-}
-
-.social-icons ul li {
-  display: inline-block;
-}
-
 .social-icons ul li a {
   border: 0 none;
   border-radius: 0;
   color: #fff;
   padding: 0;
+}
+
+.shop-menu ul li a {
+  background: #fff;
+  color: #d92b34;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  padding: 0;
+  padding-right: 0;
+  margin-top: 10px;
+}
+
+.product-info p a {
+  color: #1a202c;
+}
+
+.contactinfo ul li a {
+  font-size: 12px;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+}
+
+.carousel-indicators > li {
+  background: #c4c4be;
+}
+
+.social-icons > ul > li {
+  display: inline-block;
+}
+
+.overlay-icon i {
+  position: relative;
+  top: 50%;
+  margin-top: -20px;
+}
+
+.add-to-cart i {
+  margin-right: 5px;
+}
+
+.recommended-item-control i {
+  background: none repeat scroll 0 0 #fe980f;
+  color: #fff;
+  font-size: 20px;
+  padding: 4px 10px;
 }
 
 .social-icons ul li a i {
@@ -145,25 +178,19 @@ h6 {
   box-shadow: none;
 }
 
-.shop-menu ul li {
+.shop-menu > ul > li {
   display: inline-block;
   padding-left: 15px;
   padding-right: 15px;
 }
 
-.shop-menu ul li:last-child {
-  padding-right: 0;
+.mainmenu > ul > li {
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
-.shop-menu ul li a {
-  background: #fff;
-  color: #d92b34;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  font-weight: 300;
-  padding: 0;
+.shop-menu > ul > li:last-child {
   padding-right: 0;
-  margin-top: 10px;
 }
 
 .shop-menu ul li a i {
@@ -179,11 +206,6 @@ h6 {
   padding-left: 0;
 }
 
-.mainmenu ul li {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
 .mainmenu ul li a {
   color: #000;
   font-family: 'Roboto', sans-serif;
@@ -193,12 +215,47 @@ h6 {
   padding-bottom: 10px;
 }
 
+.brands-filter-rating a {
+  display: block;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.brands-name .nav-stacked li a {
+  background-color: #fff;
+  color: #696763;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  padding: 5px 25px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.product-overlay p a {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #fff;
+}
+
 .dropdown-menu > li > a:hover,
 .dropdown-menu > li > a:focus {
   background-color: #fe980f;
   color: #fff;
   font-family: 'Roboto', sans-serif;
   text-decoration: none;
+}
+
+.product-overlay p a:hover {
+  color: #fe980f;
+}
+
+.product-info p a:hover {
+  color: #fe980f;
+}
+
+.brands-filter a {
+  color: #696763;
 }
 
 .mainmenu > ul > li > a:hover,
@@ -255,7 +312,7 @@ ul.sub-menu {
   animation: fadeInUp 400ms;
 }
 
-.dropdown ul.sub-menu li .active {
+.dropdown > ul.sub-menu > li > .active {
   color: #fdb45e;
   padding-left: 0;
 }
@@ -264,7 +321,11 @@ ul.sub-menu {
   padding-left: 5px;
 }
 
-.social-icons ul li a i:hover {
+.recommended-item-control > i:hover {
+  background: #ccccc6;
+}
+
+.social-icons > ul > li > a > i:hover {
   color: #fff;
   transition: all 0.9s ease 0s;
   -moz-transition: all 0.9s ease 0s;
@@ -316,7 +377,7 @@ ul.sub-menu {
   width: 100%;
 }
 
-.address p {
+.address > p {
   color: #666663;
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
@@ -354,12 +415,6 @@ ul.sub-menu {
   opacity: 0;
   -webkit-transition: 300ms;
   transition: 300ms;
-}
-
-.overlay-icon i {
-  position: relative;
-  top: 50%;
-  margin-top: -20px;
 }
 
 .video-gallery a:hover .overlay-icon {
@@ -401,15 +456,19 @@ ul.sub-menu {
   text-decoration: underline;
 }
 
-.mainmenu ul li:first-child {
+.mainmenu > ul > li:first-child {
   padding-left: 0;
 }
 
-.navbar-nav li ul.sub-menu li {
+.contactinfo > ul > li:first-child {
+  margin-left: -15px;
+}
+
+.navbar-nav > li > ul.sub-menu > li {
   padding: 10px 20px 0;
 }
 
-.navbar-nav li ul.sub-menu li:last-child {
+.navbar-nav > li > ul.sub-menu > li:last-child {
   padding-bottom: 20px;
 }
 
@@ -445,11 +504,7 @@ ul.sub-menu {
   color: #c2c2c1;
 }
 
-.carousel-indicators li {
-  background: #c4c4be;
-}
-
-.carousel-indicators li.active {
+.carousel-indicators > li.active {
   background: #fe980f;
 }
 
@@ -546,11 +601,7 @@ h2.title::before {
   margin-bottom: 15px;
 }
 
-.brands-filter a {
-  color: #696763;
-}
-
-.brands-filter a:hover {
+.brands-filter > a:hover {
   color: #fe980f;
 }
 
@@ -562,23 +613,7 @@ h2.title::before {
   margin-bottom: 15px;
 }
 
-.brands-filter-rating a {
-  display: block;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-.brands-name .nav-stacked li a {
-  background-color: #fff;
-  color: #696763;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  padding: 5px 25px;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-.brands-name .nav-stacked li a:hover {
+.brands-name .nav-stacked > li > a:hover {
   background-color: #fff;
   color: #696763;
 }
@@ -627,17 +662,6 @@ h2.title::before {
   color: #fff;
 }
 
-.product-overlay p a {
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  color: #fff;
-}
-
-.product-overlay p a:hover {
-  color: #fe980f;
-}
-
 .product-info {
   position: relative;
 }
@@ -650,11 +674,8 @@ h2.title::before {
 }
 
 .product-info img {
+  height: 250px;
   width: 100%;
-}
-
-.product-info > p > a {
-  margin: 1px;
 }
 
 .product-overlay {
@@ -683,10 +704,6 @@ h2.title::before {
   font-family: 'Roboto', sans-serif;
   font-size: 15px;
   margin-bottom: 25px;
-}
-
-.add-to-cart i {
-  margin-right: 5px;
 }
 
 .product-overlay .add-to-cart {
@@ -725,25 +742,10 @@ h2.title::before {
   top: 41%;
 }
 
-.recommended-item-control i {
-  background: none repeat scroll 0 0 #fe980f;
-  color: #fff;
-  font-size: 20px;
-  padding: 4px 10px;
-}
-
-.recommended-item-control i:hover {
-  background: #ccccc6;
-}
-
 .new {
   position: absolute;
   top: 0;
   right: 0;
-}
-
-.contactinfo ul li:first-child {
-  margin-left: -15px;
 }
 
 .navbar-nav > li > ul.sub-menu > li > a:hover {
@@ -774,7 +776,7 @@ a#scrollUp i {
   font-size: 30px;
 }
 
-.category-products .panel-default .panel-heading .panel-title a {
+.category-products .panel-default .panel-heading .panel-title > a {
   margin: 0;
 }
 
@@ -786,16 +788,17 @@ a#scrollUp i {
   color: #fe980f !important;
 }
 
+.result-search span {
+  color: #fe980f;
+}
+
 .result-search {
   font-size: 16px;
   padding-left: 15px;
   margin-bottom: 25px;
 }
 
-.result-search span {
-  color: #fe980f;
-}
-
 .companyinfo h2 span {
   color: #fe980f;
 }
+/* stylelint-enable no-descending-specificity */
