--- a/src/public/css/web/main.css
+++ b/src/public/css/web/main.css
@@ -802,3 +802,102 @@ a#scrollUp i {
   color: #fe980f;
 }
 /* stylelint-enable no-descending-specificity */
+
+/*************************
+********* Profile *********
+**************************/
+
+.panel.with-nav-tabs .panel-heading{
+  padding: 5px 5px 0 5px;
+}
+.panel.with-nav-tabs .nav-tabs{
+border-bottom: none;
+}
+.panel.with-nav-tabs .nav-justified{
+margin-bottom: -1px;
+}
+
+.with-nav-tabs.panel-primary .nav-tabs > li > a,
+.with-nav-tabs.panel-primary .nav-tabs > li > a:hover,
+.with-nav-tabs.panel-primary .nav-tabs > li > a:focus {
+  color: #fff;
+}
+.with-nav-tabs.panel-primary .nav-tabs > .open > a,
+.with-nav-tabs.panel-primary .nav-tabs > .open > a:hover,
+.with-nav-tabs.panel-primary .nav-tabs > .open > a:focus,
+.with-nav-tabs.panel-primary .nav-tabs > li > a:hover,
+.with-nav-tabs.panel-primary .nav-tabs > li > a:focus {
+color: #fff;
+background-color: #3071a9;
+border-color: transparent;
+}
+.with-nav-tabs.panel-primary .nav-tabs > li.active > a,
+.with-nav-tabs.panel-primary .nav-tabs > li.active > a:hover,
+.with-nav-tabs.panel-primary .nav-tabs > li.active > a:focus {
+color: #428bca;
+background-color: #fff;
+border-color: #428bca;
+border-bottom-color: transparent;
+}
+.with-nav-tabs.panel-primary .nav-tabs > li.dropdown .dropdown-menu {
+  background-color: #428bca;
+  border-color: #3071a9;
+}
+.with-nav-tabs.panel-primary .nav-tabs > li.dropdown .dropdown-menu > li > a {
+  color: #fff;   
+}
+.with-nav-tabs.panel-primary .nav-tabs > li.dropdown .dropdown-menu > li > a:hover,
+.with-nav-tabs.panel-primary .nav-tabs > li.dropdown .dropdown-menu > li > a:focus {
+  background-color: #3071a9;
+}
+.with-nav-tabs.panel-primary .nav-tabs > li.dropdown .dropdown-menu > .active > a,
+.with-nav-tabs.panel-primary .nav-tabs > li.dropdown .dropdown-menu > .active > a:hover,
+.with-nav-tabs.panel-primary .nav-tabs > li.dropdown .dropdown-menu > .active > a:focus {
+  background-color: #4a9fe9;
+}
+.image_avatar_profile img {
+  vertical-align: middle;
+  width: 150px;
+  height: 150px !important;
+  border-radius: 50%;
+}
+#panel-primary {
+  border: 1px solid #ccc;
+}
+#panel-heading {
+  background-color: #d92b34;
+}
+#profile_row1 {
+  text-align: center;margin-bottom: 45px;
+}
+#profile_form_group1,
+#profile_form_group2,
+#profile_form_group6 {
+  margin-bottom: 30px;
+}
+#profile_email {
+  margin-top: 7px;
+}
+#profile_form_group3,
+#profile_form_group4,
+#profile_form_group5 {
+  margin-bottom: 50px;
+}
+#profile_name,
+#profile_phone,
+#profile_date_of_birth,
+#profile_address,
+#current_password,
+#profile_new_password,
+#profile_enter_new_password {
+  height:43px;
+}
+#profile_gender {
+  width: 100%;
+  height: 43px;
+  border: 1px solid #ccc;
+}
+#div_image {
+  text-align: center;
+}
+
