--- a/src/public/css/admin/styles.css
+++ b/src/public/css/admin/styles.css
@@ -11267,6 +11267,25 @@ strong {
   display: inline-block;
 }
 
+/* menu multi level */
+.dropdown-menu li {
+  position: relative;
+}
+.dropdown-menu .dropdown-submenu {
+  display: none;
+  position: absolute;
+  left: 100%;
+  top: -7px;
+}
+.dropdown-menu .dropdown-submenu-left {
+  right: 100%;
+  left: auto;
+}
+.dropdown-menu > li:hover > .dropdown-submenu {
+  display: block;
+}
+
+
 
 /* manager user */
 .image_avatar_profile img {
